--- a/themes/btemptd/assets/scss/website/layouts/_explore-blog.scss
+++ b/themes/btemptd/assets/scss/website/layouts/_explore-blog.scss
@@ -247,6 +247,7 @@
           width: get-vw(72px);
           height: get-vw(72px);
           bottom: get-vw(-56px);
+          top: inherit;
         }
       }
   }
